--- a/index.html
+++ b/index.html
@@ -6,41 +6,41 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="matrix">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="matrix-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-page">
+      <p id="add-task-section">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+        <div class="input-wrapper">
+          <input id="new-task" class="task-input" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incomplete-tasks-section">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
           <button class="edit">Save</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="completed-tasks-section">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg"></button>
         </li>
