--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="wrapper">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg" class="matrix-img">
+      <img src="./eisenhower-matrix.jpg" class="matrix-img" alt="Eisenhower matrix">
       <a class="matrix-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main-page">
@@ -25,14 +25,14 @@
           <label class="task-label">Pay Bills</label>
           <input type="text" class="task-input">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img"></button>
+          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
         </li>
         <li class="edit-mode todo-item">
           <input type="checkbox" class="task-checkbox">
           <label class="task-label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task-input">
           <button class="btn edit">Save</button>
-          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img"></button>
+          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
         </li>
       </ul>
       <h3 class="title">Completed</h3>
@@ -42,7 +42,7 @@
           <label class="task-label">See the Doctor</label>
           <input type="text" class="task-input">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img"></button>
+          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
         </li>
       </ul>
     </div>
