--- a/index.html
+++ b/index.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700" >
+    <link rel="stylesheet" href="style.css">
   </head>
   <body class="wrapper">
-    <div class="matrix">
-      <img src="./eisenhower-matrix.jpg" class="matrix-img" alt="Eisenhower matrix">
-      <a class="matrix-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main-page">
-      <p id="add-task-section">
-        <label for="new-task" class="new-task-label">Add Item</label>
+    <header class="header">
+      <img src="./eisenhower-matrix.jpg" class="header-img" alt="Eisenhower matrix">
+      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    </header>
+    <main class="main">
+      <section class="new-task">
+        <h3 class="new-task-title">Add Item</h3>
         <div class="input-wrapper">
-          <input id="new-task" class="new-task-input" type="text">
+          <input class="new-task-input" type="text">
           <button class="btn btn-add">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul id="incomplete-tasks-section" class="todo-list">
-        <li class="todo-item">
-          <input type="checkbox" class="task-checkbox">
-          <label class="task-label">Pay Bills</label>
-          <input type="text" class="task-input">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
-        </li>
-        <li class="edit-mode todo-item">
-          <input type="checkbox" class="task-checkbox">
-          <label class="task-label">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-input">
-          <button class="btn edit">Save</button>
-          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul id="completed-tasks-section" class="todo-list completed">
-        <li class="todo-item">
-          <input type="checkbox" class="task-checkbox" checked>
-          <label class="task-label">See the Doctor</label>
-          <input type="text" class="task-input">
-          <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
-        </li>
-      </ul>
-    </div>
+      </section>
+      <section class="incomplete-tasks">
+        <h3 class="title">Todo</h3>
+        <ul id="incomplete-tasks-section" class="todo-list">
+          <li class="todo-item">
+            <input type="checkbox" class="task-checkbox">
+            <label class="task-label">Pay Bills</label>
+            <input type="text" class="task-input">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
+          </li>
+          <li class="edit-mode todo-item">
+            <input type="checkbox" class="task-checkbox">
+            <label class="task-label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task-input">
+            <button class="btn edit">Save</button>
+            <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
+          </li>
+        </ul>
+      </section>
+      <section class="completed-tasks">  
+        <h3 class="title">Completed</h3>
+        <ul id="completed-tasks-section" class="todo-list completed">
+          <li class="todo-item">
+            <input type="checkbox" class="task-checkbox" checked>
+            <label class="task-label">See the Doctor</label>
+            <input type="text" class="task-input">
+            <button class="btn edit">Edit</button>
+            <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
