--- a/index.html
+++ b/index.html
@@ -9,45 +9,45 @@
   </head>
   <body class="wrapper">
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" class="header-img" alt="Eisenhower matrix">
-      <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
       <section class="new-task">
-        <h3 class="new-task-title">Add Item</h3>
-        <div class="input-wrapper">
-          <input class="new-task-input" type="text">
-          <button class="btn btn-add">Add</button>
+        <h3 class="new-task__title">Add Item</h3>
+        <div class="new-task__input-wrapper">
+          <input class="new-task__input" type="text">
+          <button class="new-task__btn btn">Add</button>
         </div>
       </section>
       <section class="incomplete-tasks">
-        <h3 class="title">Todo</h3>
-        <ul id="incomplete-tasks-section" class="todo-list">
-          <li class="todo-item">
-            <input type="checkbox" class="task-checkbox">
-            <label class="task-label">Pay Bills</label>
-            <input type="text" class="task-input">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
+        <h3 class="incomplete-tasks__title">Todo</h3>
+        <ul class="incomplete-tasks__list task-list">
+          <li class="task-item">
+            <input class="task-item__checkbox" type="checkbox">
+            <label class="task-item__label">Pay Bills</label>
+            <input class="task-item__input" type="text">
+            <button class="task-item__btn-edit btn">Edit</button>
+            <button class="task-item__btn-delete btn"><img src="./remove.svg" class="task-item__delete-img" alt="delete"></button>
           </li>
-          <li class="edit-mode todo-item">
-            <input type="checkbox" class="task-checkbox">
-            <label class="task-label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task-input">
-            <button class="btn edit">Save</button>
-            <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
+          <li class="task-item task-item_edit-mode">
+            <input class="task-item__checkbox" type="checkbox">
+            <label class="task-item__label">Go Shopping</label>
+            <input class="task-item__input" type="text" value="Go Shopping">
+            <button class="task-item__btn-edit btn">Save</button>
+            <button class="task-item__btn-delete btn"><img src="./remove.svg" class="task-item__delete-img" alt="delete"></button>
           </li>
         </ul>
       </section>
       <section class="completed-tasks">  
-        <h3 class="title">Completed</h3>
-        <ul id="completed-tasks-section" class="todo-list completed">
-          <li class="todo-item">
-            <input type="checkbox" class="task-checkbox" checked>
-            <label class="task-label">See the Doctor</label>
-            <input type="text" class="task-input">
-            <button class="btn edit">Edit</button>
-            <button class="btn delete"><img src="./remove.svg" class="btn-delete-img" alt="delete"></button>
+        <h3 class="completed-tasks__title">Completed</h3>
+        <ul class="completed-tasks__list task-list">
+          <li class="task-item">
+            <input class="task-item__checkbox" type="checkbox" checked>
+            <label class="task-item__label">See the Doctor</label>
+            <input class="task-item__input" type="text">
+            <button class="task-item__btn-edit btn">Edit</button>
+            <button class="task-item__btn-delete btn"><img src="./remove.svg" class="task-item__delete-img" alt="delete"></button>
           </li>
         </ul>
       </section>
